Fixed all the enable-disable problems

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -248,15 +248,15 @@
 	</div>
 
 	<menu id="appMenu" type="context">
-		<command type="command" id="languageCmd" icon="optionLanguage.png" disabled="false" action="read-in" />
-		<command type="command" id="nearbyCmd" icon="optionNearMe.png" disabled="false" action="near-me" />
-		<command type="command" id="historyCmd" icon="optionViewHistory.png" disabled="false" action="view-history" />
-		<command type="command" id="savePageCmd" icon="optionAddBookmark.png" disabled="false" action="save-page" />
-		<command type="command" id="savedPagesCmd" icon="optionReadLater.png" disabled="false" action="view-saved-pages" />
-		<command type="command" id="sharePageCmd" disabled="false" action="share-page" />
-		<command type="command" id="forwardCmd" icon="optionForward.png" disabled="true" action="go-forward" />
-		<command type="command" id="selectTextCmd" disabled="false" action="select-text" />
-		<command type="command" id="settingsCmd" icon="optionSettings.png" disabled="false" action="view-settings" />
+		<command type="command" id="languageCmd" icon="optionLanguage.png" disabled action="read-in" />
+		<command type="command" id="nearbyCmd" icon="optionNearMe.png" action="near-me" />
+		<command type="command" id="historyCmd" icon="optionViewHistory.png"  action="view-history" />
+		<command type="command" id="savePageCmd" icon="optionAddBookmark.png" action="save-page" />
+		<command type="command" id="savedPagesCmd" icon="optionReadLater.png" action="view-saved-pages" />
+		<command type="command" id="sharePageCmd" action="share-page" />
+		<command type="command" id="forwardCmd" disabled icon="optionForward.png" action="go-forward" />
+		<command type="command" id="selectTextCmd"  action="select-text" />
+		<command type="command" id="settingsCmd" icon="optionSettings.png" action="view-settings" />
 	</menu>
 
 </body>
