--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -168,7 +168,7 @@
 		<div class="scroller">
 			<div id="about-page-content">
 				<img src="image/logo.png" />
-				<p id="about-version"><msg key="about-version"></msg> 1.1-alpha1</p>
+				<p id="about-version"><msg key="about-version"></msg> 1.1-beta1</p>
 				<a id="about-wmf-logo" href="http://wikimediafoundation.org/"><img src="image/wmf.png" /></a>
 				<p id="about-copyright"><msg key="about-copyright"></msg></p>
 				<p id="about-license"><msg key="about-license"></msg></p>
