Added credits to About Page

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -171,6 +171,10 @@
 				<p id="about-version"><msg key="about-version"></msg> 1.1-beta1</p>
 				<a id="about-wmf-logo" href="http://wikimediafoundation.org/"><img src="image/wmf.png" /></a>
 				<p id="about-copyright"><msg key="about-copyright"></msg></p>
+				<p id="about-contributors-header"><msg key="about-contributors"></msg></p>
+				<p id="about-contributors"></p>
+				<p id="about-credits-header"><msg key="about-credits"></msg></p>
+				<p id="about-credits"></p>
 				<p id="about-license"><msg key="about-license"></msg></p>
 			</div>
 		</div>
