less hacky way of disable webkit3d transformations

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" charset="utf-8" src="js/jquery.localize.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/iscroll.js"></script>
 
-	<script type="text/javascript" charset="utf-8" src="leaflet/leaflet-src.js"></script>
+	<script type="text/javascript" charset="utf-8" src="leaflet/leaflet.js"></script>
 
 	<script type="text/javascript" charset="utf-8" src="js/propertiesFileReader.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/preferences.js"></script>
