image-less working version of iOS Saved Pages

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -14,6 +14,8 @@
 	<script type="text/javascript" charset="utf-8" src="js/zepto.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/hogan.min.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/mediawiki.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/2.5.3-crypto-md5.js"></script>
+	<script type="text/javascript" charset="utf-8" src="js/urlcache.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/jquery.localize.js"></script>
 	<script type="text/javascript" charset="utf-8" src="js/iscroll.js"></script>
 
